# ultracompress

./: .gitignore  .mailmap  .pre-commit-config.yaml  BENCHMARK_LEADERBOARD.md  BUSINESS_PLAN.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIVERR_GIG.md  HQ3_RESULTS.md  INVENTION_SKETCH.md  LICENSE  LICENSE.apache  MANIFEST.in  MODEL_CARD.md  MORNING_REPORT.md  NOTICE.md  PAPER_DRAFT.md  PATENT_CLAIMS.md  PATENT_DRAFT.md  PATENT_FILING_CHECKLIST.md  PATENT_NOTICE.md  README.md  README.previous.md  REPRODUCE.md  RESULTS.md  ROADMAP.md  SBOM-cyclonedx.json  SECURITY.md  SHOW_HN.md  STATUS.md  THIRD_PARTY_LICENSES.txt  TWITTER_THREAD.md  WEBSITE.md  WHAT_WORKS.md  WORKDAY_REPORT.md  YC_APPLICATION.md  _analyze_claim20.py  _packed_hermes_3_405b_v3_README_TEMPLATE.md  (+203 more)
.githooks/: README.md  commit-msg  pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: charter-check.yml  ci.yml  regression_tests.yml  release.yml  security.yml  test.yml
archive/: README.md  compress_v10.py  compress_v14.py  compress_v18.py  compress_vocab.py  compress_vocab_v2.py  compress_vocab_v5.py  compress_vocab_v7.py  lambada_overlay_adaptive.py  run_v6_sweep.py  run_v7_sweep_gpu1.py  screen_v16.py
deploy/: hf_cards_charter_refresh_v0.6.0.py
docs/: ACCELERATOR_TARGETS.md  APPS_ADMIN_SWEEP_2026_05_08.md  ARXIV_CHECKLIST.md  BENCHMARKS_2026_05_08.json  BENCHMARKS_2026_05_10.json  BILLION_DOLLAR_PATH_2026_05_08.md  BILLION_DOLLAR_WEEKEND_FOCUS_2026_05_09.md  BLOG_POST_v3_LOSSLESS_2026_05_08.md  BUSINESS_PLAN.md  COMMIT_KNOWLEDGE_MAP_2026_05_09.md  CRITICAL_SIPSALABS_DOMAIN_FIX_2026_05_10.md  CUSTOMER_ONBOARDING_EMAIL_SEQUENCE_2026_05_04.md  CUSTOMER_ONBOARDING_FLOW_v3_2026_05_08.md  CUSTOMER_ONBOARDING_v0.5.3.md  CUSTOMER_ONBOARDING_v0.5.4_2026_05_09.md  CUSTOMER_ONBOARDING_v0.5.5_2026_05_09.md  CUSTOMER_PHASE_0_GENERIC_PLAYBOOK_2026_05.md  CUSTOMER_PHASE_0_POC_CONTRACT_TEMPLATE.md  CUSTOMER_PHASE_0_POC_OFFER_LETTER.md  CUSTOMER_PIPELINE_BEYOND_VARION_REFRESH_2026_05_04.md  DAY2_SUMMARY.md  HEAD_TO_HEAD_BENCHMARK_RESULTS_2026_05_08.md  HF_GATING_POLICY_2026_05_10.md  HF_MODEL_CARD_HERMES_3_405B.md  HIDDEN_MSE_MISTRAL_7B_V03_v10_PARTIAL.json  HN_FIRST_COMMENT_PASTEREADY_2026_05_10.md  HOMEPAGE_REFRESH_DRAFT_2026_05_10.md  HONEST_NEGATIVE_RESULTS_2026_05_08.md  HQ4_RESULTS.md  HQ5_RESULTS.md  ICP_EXPANSION_40_2026_05_09.md  INVESTOR_UPDATE_TEMPLATE_2026_05_08.md  INVESTOR_WAVE_3_MISTRAL_BREAKTHROUGH_2026_05_10.md  IP_AND_SPONSORSHIP_SETUP_2026_05_09.md  KNOWN_ISSUES.md  LAB-NOTEBOOK.md  LAUNCH_LINKEDIN_7_STARS_2026_05_08.md  LAUNCH_LINKEDIN_HERMES_405B_2026_05_09.md  LAUNCH_LINKEDIN_MULTI_ARCH_2026_05_08.md  LAUNCH_POSTS.md  (+96 more)
docs/OUTREACH_2026_05_08/: 01_tri_dao.md  02_albert_gu_cartesia.md  03_yi_tay_ai21.md  04_lambda_coreweave.md  05_nasa_hpsc.md  _SEND_LIST.md
docs/OUTREACH_PHASE0_POC_2026_05_09/: _SEND_ORDER_2026_05_09.md  coreweave.md  fireworks_ai.md  glean.md  harvey.md  lambda_labs.md  mistral.md  modal.md  ollama.md  palantir.md  replicate.md  together_ai.md
docs/commands/: bench.md  demo.md  info.md  list.md  pull.md  version.md
docs/concepts/: bits-per-weight.md  catastrophic-failures.md  compression-methods.md  reproducibility.md
examples/: run_locally.py
lib/: fast_teacher.py  local_data.py  unbuffered.py
results/: README.md  claim18a_fp8_qwen3_1.7b_rho0003_n80.json  claim21_block_shuffle.txt  claim21_block_shuffle_qwen3_1.7b_rho0.01.json  claim21_byte_permutation.txt  claim21_byte_permutation_olmo2_1b_rho0.01.json  claim21_byte_permutation_qwen3_1.7b_rho0.01.json  claim21_byte_permutation_smollm2_1.7b_rho0.01.json  claim21_byte_permutation_tinyllama_rho0.01.json  claim21_codec_correlation.txt  claim21_codec_summary.json  claim21_codec_summary.txt  claim21_codec_sweep_mistral_7b_rho0.003.json  claim21_codec_sweep_mistral_7b_rho0.01.json  claim21_codec_sweep_mistral_7b_rho0.03.json  claim21_codec_sweep_olmo2_1b_rho0.003.json  claim21_codec_sweep_olmo2_1b_rho0.01.json  claim21_codec_sweep_olmo2_1b_rho0.03.json  claim21_codec_sweep_qwen3_1.7b_rho0.003.json  claim21_codec_sweep_qwen3_1.7b_rho0.01.json  claim21_codec_sweep_qwen3_1.7b_rho0.03.json  claim21_codec_sweep_qwen3_8b_rho0.003.json  claim21_codec_sweep_qwen3_8b_rho0.01.json  claim21_codec_sweep_qwen3_8b_rho0.03.json  claim21_codec_sweep_rho_axis.txt  claim21_codec_sweep_smollm2_1.7b_rho0.003.json  claim21_codec_sweep_smollm2_1.7b_rho0.01.json  claim21_codec_sweep_smollm2_1.7b_rho0.03.json  claim21_codec_sweep_tinyllama_rho0.003.json  claim21_codec_sweep_tinyllama_rho0.01.json  claim21_codec_sweep_tinyllama_rho0.03.json  claim21_codec_throughput.json  claim21_codec_throughput.txt  claim21_coder_efficiency.json  claim21_coder_efficiency.txt  claim21_combined_stream.txt  claim21_combined_stream_rho0.01.json  claim21_combined_stream_summary.json  claim21_delta_bytewise.txt  claim21_delta_bytewise_olmo2_1b_rho0.01.json  (+173 more)
scaling/: teacher_loader.py
tests/: test_aux_pack.py  test_bench.py  test_cli_smoke.py  test_cli_smoke_extra.py  test_frr_core.py  test_info.py  test_listing.py  test_pull.py  test_sanity.py  test_smoke.py
tools/: api_design.py  app.py  compress_e2e.py  compress_frr.py  create_model_card.py  factor_lmhead.py  quickstart.py  savings_calculator.py  setup_tools.sh  wait_and_ptq.py
ultracompress/: __init__.py  __main__.py  activation_aware.py  api_compressor.py  api_v3.py  api_v3_memory_aware.py  attn_rotation_block.py  attn_scan_block.py  aux_pack.py  bench.py  binarize.py  calibrate.py  calibrated_pq.py  cawn_resonance.py  cellular_automata.py  chaos_fractal.py  cli.py  codebook.py  codec.py  compress_mind.py  compressed_sensing.py  compression_aware.py  context_compress.py  controller.py  cross_model_fusion.py  crosslayer.py  crystal_net.py  curved_space.py  dendritic.py  deploy.py  differentiable_pq.py  diffusion_compress.py  dimensional_block.py  dual_objective.py  dynamic_precision.py  entropy_coding.py  error_correcting.py  error_only.py  factorize.py  field_compress.py  (+86 more)
(+297 files in other folders)
