[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultracompress"
version = "0.6.11"
description = "Extreme compression for large language models. Download pre-compressed models from Hugging Face Hub; self-compress support coming soon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sipsa Labs", email = "founder@sipsalabs.com" }
]
keywords = ["llm", "compression", "quantization", "transformer", "inference", "edge-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.24.0",
    "safetensors>=0.4.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.11.0",
]
bench = [
    "torch>=2.11.0",
    "lm-eval>=0.4.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
uc = "ultracompress_cli.__main__:main"
ultracompress = "ultracompress_cli.__main__:main"

[project.urls]
Homepage = "https://sipsalabs.com"
Documentation = "https://github.com/sipsalabs/ultracompress#readme"
Repository = "https://github.com/sipsalabs/ultracompress"
Issues = "https://github.com/sipsalabs/ultracompress/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ultracompress_cli"]

[tool.hatch.build.targets.wheel.sources]
"src/ultracompress_cli" = "ultracompress_cli"

[tool.hatch.build.targets.wheel.force-include]
"THIRD_PARTY_LICENSES.txt" = "ultracompress_cli/THIRD_PARTY_LICENSES.txt"
"SBOM-cyclonedx.json" = "ultracompress_cli/SBOM-cyclonedx.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/ultracompress_cli/**",
    "tests/**",
    "docs/**",
    "README.md",
    "LICENSE",
    "THIRD_PARTY_LICENSES.txt",
    "SBOM-cyclonedx.json",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
