[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultracompress"
version = "0.6.19"
description = "Lossless 5-bit transformer compression — 20 PPL-verified architectures (19 transformer + 1 state-space model with comparator-note caveat) across 22 packs shipped (0.6B–405B; dense + MoE + SSM). Public CLI does pack structure + download-integrity checks; the codec is patent-pending and not distributed. BUSL-1.1 + Additional Use Grant."
readme = "README.md"
license = {text = "BUSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "Sipsa Labs, Inc.", email = "founder@sipsalabs.com"},
]
keywords = ["model-compression", "llm", "transformer", "quantization", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Public CLI is pure standard library — no third-party runtime deps.
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.5",
    "hypothesis>=6.148",
    "mypy>=1.20",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "twine>=6.2",
]

[project.urls]
Homepage = "https://github.com/sipsalabs/ultracompress"
Repository = "https://github.com/sipsalabs/ultracompress"
Issues = "https://github.com/sipsalabs/ultracompress/issues"

[project.scripts]
ultracompress = "ultracompress.cli:main"
uc = "ultracompress.cli:main"

# IMPORTANT: the wheel is built from the minimal clean staging directory
# (_build_public/ultracompress/) populated by `python build_public_wheel.py`
# from _public_src/. The lab tree at ./ultracompress/ never ships.
[tool.setuptools]
package-dir = {"ultracompress" = "_build_public/ultracompress"}
packages = ["ultracompress"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "archive",
    "artifacts",
    "big_models",
    "checkpoints_*",
    "dist",
    "hf_publish_*",
    "logs",
    "runs",
    "tmp",
    "_build_public",
    "_packed_*",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = "^(archive|artifacts|big_models|checkpoints_.*|dist|hf_publish_.*|logs|runs|tmp|_build_public|_packed_.*)/"
