[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultracompress"
version = "0.6.24"
description = "Lossless 5-bit transformer compression — 22 PPL-verified architectures (17 dense + 4 MoE + 1 SSM) plus 1 ViT cosine-verified — across 4 architecture classes (0.6B–405B). Public CLI does pack structure + download-integrity checks; the codec is patent-pending and not distributed. BUSL-1.1 + Additional Use Grant."
readme = "README.md"
license = {text = "BUSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "Sipsa Labs, Inc.", email = "founder@sipsalabs.com"},
]
keywords = ["model-compression", "llm", "transformer", "quantization", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Public CLI is pure standard library — no third-party runtime deps.
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.5",
    "hypothesis>=6.148",
    "mypy>=1.20",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "twine>=6.2",
]

[project.urls]
Homepage = "https://github.com/sipsalabs/ultracompress"
Repository = "https://github.com/sipsalabs/ultracompress"
Issues = "https://github.com/sipsalabs/ultracompress/issues"

[project.scripts]
ultracompress = "ultracompress.cli:main"
uc = "ultracompress.cli:main"

# Public package lives at src/ultracompress/. The canonical "src layout"
# keeps the importable package isolated from repo-root noise (docs, tools,
# tests). `pip install -e .` makes src/ultracompress importable as
# `ultracompress` without copying.
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ultracompress"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "archive",
    "artifacts",
    "big_models",
    "checkpoints_*",
    "dist",
    "hf_publish_*",
    "logs",
    "runs",
    "tmp",
    "_build_public",
    "_packed_*",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = "^(archive|artifacts|big_models|checkpoints_.*|dist|hf_publish_.*|logs|runs|tmp|_build_public|_packed_.*)/"
